--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
                         <hr>
                         <div class="container">
                           <div class="row">
-                            <img src="poker/0.gif" class="col-4 offset-1" onclick="showplayer()" id="p2">
-                            <img src="poker/0.gif" class="col-4 offset-3 " onclick="showhost()" id="p3">
+                            <img src="poker/0.GIF" class="col-4 offset-1" onclick="showplayer()" id="p2">
+                            <img src="poker/0.GIF" class="col-4 offset-3 " onclick="showhost()" id="p3">
                           </div>
                           <div class="row">
                             <label class="offset-1 col-4 bg-warning">玩家</label>
